@@ -76,4 +76,9 @@ public interface IccrService {
     @Path("/iota/nodeinfo")
     @Produces(MediaType.APPLICATION_JSON)
     Response getIotaNodeInfo(@Context HttpServletRequest request);
+
+    @GET
+    @Path("/iota/log")
+    @Produces(MediaType.APPLICATION_JSON)
+    Response getIotaLog(@Context HttpServletRequest request);
 }
